修改其最小样式

--- a/src/components/Login/css/index.scss
+++ b/src/components/Login/css/index.scss
@@ -1,6 +1,7 @@
 .header-login{
     position: relative;
     width: 56px;
+    min-width: 56px;
     height: 100%;
     div.header-avatar{
         position: absolute;
