--- a/src/components/Header/css/index.scss
+++ b/src/components/Header/css/index.scss
@@ -8,6 +8,7 @@
     align-items: center;
     height: 100%;
     width: 16.66666667%;
+    min-width: 200px;
     & > .icon {
       font-size: 24px;
       margin-right: 10px;
