--- a/src/components/Search/css/index.scss
+++ b/src/components/Search/css/index.scss
@@ -3,6 +3,7 @@
     align-items: center;
     padding-left: 10px;
     width: 1176px;
+    min-width: 300px;
     height: 30px;
     box-sizing: border-box;
     border-left: 1px solid rgb(235, 234, 234);
