--- a/src/components/Describe/css/index.scss
+++ b/src/components/Describe/css/index.scss
@@ -6,10 +6,12 @@
 }
 
 .describe {
+  position: fixed;
   order: 1;
   width: 16.66666667%;
   min-width: 200px;
   height: calc(100vh - 64px - 40px);
+  border-right: 1px solid rgba(248, 248, 248, 0.8);
   .describe-avatar {
     width: 100%;
     text-align: center;
