--- a/src/components/Header/css/index.scss
+++ b/src/components/Header/css/index.scss
@@ -1,7 +1,23 @@
+@media screen and (max-width: 992px) {
+  .header {
+    .header-left{
+      display: none !important;
+    }
+  }
+  .header {
+    .header-right{
+      width: 100% !important;
+    }
+  }
+}
+
 .header {
+  position: fixed;
   display: flex;
+  width: 100%;
   height: 64px;
   box-shadow: 0 2px 2px 2px rgba(124, 122, 122, 0.1);
+  background-color: white;
   .header-left {
     display: flex;
     justify-content: center;
