--- a/src/pages/Lists/css/index.scss
+++ b/src/pages/Lists/css/index.scss
@@ -1,33 +1,40 @@
 .pages-lists {
   width: 100%;
+
   ul {
     width: 100%;
     height: 100%;
+
     li.pages-lists-article {
       margin-bottom: 10px;
       width: 100%;
-      height: 390px;
+      height: auto;
+      max-height: 370px;
       box-sizing: border-box;
+
       div.pages-lists-title {
         margin: 16px 0;
         color: rgba(0, 0, 0, 0.85);
         font-weight: 500;
         font-size: 16px;
-        span {
-          a {
-            color: rgba(0, 0, 0, 0.85);
-            font-size: 22px;
-            font-weight: 600px;
-            &:hover {
-              color: #1890ff;
-            }
-          }
-          span {
-            margin-left: 20px;
-            vertical-align: bottom;
-            color: rgba(0, 0, 0, 0.4);
+        display: flex;
+        align-items: baseline;
+        h1 {
+          color: rgba(0, 0, 0, 0.85);
+          font-size: 22px;
+          font-weight: 600px;
+          transition: all .5s;
+          &:hover {
+            color: #1890ff;
+            cursor: pointer;
           }
         }
+        span {
+          margin-left: 20px;
+          vertical-align: bottom;
+          color: rgba(0, 0, 0, 0.4);
+        }
+
         &::before {
           margin: 0 4px;
           position: relative;
@@ -36,58 +43,82 @@
           content: "";
           width: 8%;
           display: inline-block;
-          border-top: 1px solid rgba(248, 248, 248, 0.8);
+          border-top: 1px solid rgba(221, 219, 219, 0.8);
         }
-        &::after {
-          margin: 0 4px;
-          position: relative;
-          top: -6px;
-          left: 0;
-          content: "";
-          width: 60%;
-          display: inline-block;
-          border-top: 1px solid rgba(248, 248, 248, 0.8);
-        }
+
       }
+
       div.pages-lists-desc {
         padding: 2px;
         width: 100%;
-        height: 220px;
+        height: auto;
         box-sizing: border-box;
+
         h2 {
-          margin: 20px 10px 15px 0;
-          padding-top: 10px;
           border-bottom: 1px solid #eee;
           font-weight: bold;
           color: #555;
           font-size: 20px;
         }
+
         p {
           color: rgba(0, 0, 0, 0.658);
         }
       }
+
       div.pages-lists-tag {
         span {
           margin-left: 6px;
         }
+
         .icon-tag {
           color: rgba(0, 0, 0, 0.4);
-          svg{
+
+          svg {
             margin-right: 4px;
           }
         }
       }
-      &:hover{
+
+      &:hover {
         background-color: rgb(239, 251, 255);
-        box-shadow:  0 0 6px 6px rgb(248, 245, 245);
+        box-shadow: 0 0 6px 6px rgb(248, 245, 245);
         transition: all 0.4s;
-        .pages-lists-desc{
+
+        .pages-lists-desc {
           cursor: pointer;
-          p{
-            color:rgba(0, 0, 0, 0.4);
+
+          p {
+            color: rgba(0, 0, 0, 0.4);
           }
         }
       }
     }
   }
+}
+
+code {
+  margin: 0 2px;
+  background-color: rgba(#ffadd2, 0.3);
+  color: black;
+  font-size: 16px;
+}
+
+pre {
+  background: #0D0D0D;
+  color: #FFF;
+  font-family: 'JetBrainsMono', monospace;
+  padding: 0.75rem 1rem;
+  border-radius: 0.5rem;
+
+  code {
+    color: inherit;
+    padding: 0;
+    background: none;
+    font-size: 0.8rem;
+  }
+}
+blockquote {
+  padding-left: 1rem;
+  border-left: 2px solid rgba(#0D0D0D, 0.1);
 }
